crates/sabiql/src/tests/render_snapshots/snapshots/sabiql__render_snapshots__inspector__inspector_triggers_tab_empty.snap
---
source: crates/sabiql/src/tests/render_snapshots/inspector.rs
assertion_line: 371
expression: output
---
test_project ▸ test_db ▸ -                                                                                                            connected | localhost:5432/test
┌ [1] Explorer ─────────────────────────┐[Info] [Cols] [Idx] [FK] [RLS] [Trig] [DDL]                                                                                 
│> public.users                         │┌ [2] Inspector ───────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│  public.posts                         ││No triggers                                                                                                               │
│  public.comments                      ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       │└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
│                                       │┌ [3] Result ──────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                       ││(select a table to preview)                                                                                               │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
└───────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
r:Reload  s:SQL  e:ER Diagram  c:Connections  ^P:Tables  ^O:History  ^R:Read-Only  f:Focus  [/]:InsTabs  ?:Help  F1:Palette  ,:Settings  q:Quit
